fixing splash page alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,10 @@ html{
   width: 70%;
 }
 
+.app-tagline{
+  text-align: center;
+}
+
 .logo{
   text-align: center;
   display: block;
